2007-02-21  Matt Rice  <ratmice@gmail.com>

	* GormLib/IBResourceManager.m (+registerResourceManagerClass:):
	Post an IBResourceManagerRegistryDidChangeNotification.

2007-02-04  Matt Rice  <ratmice@gmail.com>

	* GormCore/GormDocument.m (_real_close): New function.
	(handleNotification:): Move document closing code to _real_close.
	(close:): Call _real_close.

2006-12-27 23:01-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [Gorm init] added code to force menu interface style
	to NSNextStepInterfaceStyle.

2006-10-04  Matt Rice  <ratmice@gmail.com>

	* Palettes/3Menus/GormTableViewEditor.m: Start a connection when
	control-mousing the selected table column.

2006-12-03 19:54-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.h: Change declaration for window member 
	from NSWindow to GormDocumentWindow.
	* GormCore/GormDocument.m: Move cast from call to setDocument:
	to call to _docWindow private method.

2006-12-03 19:34-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Cast window for call of
	setDocument: method in awakeFromNib.
	* GormCore/GormDocumentWindow.h: Add setDocument: method.

2006-12-02  Matt Rice  <ratmice@gmail.com>

	* Palettes/0Menus/GormMenuEditor.m (-mouseDown:): Call
	startConnecting.
	* GormCore/GormViewEditor.m (-startConnectingObject:withEvent:): Ditto.
	* GormCore/GormObjectEditor.m (-mouseDown:): Ditto.
	* GormCore/GormDocument.m (changeToViewWithTag:): Don't change the
	selection if connecting.
	* GormCore/GormResourceManager.m: Revert previous commit.
	* Gorm.m (-startConnecting:): Remove checks for a nil
	connectDestination.

2006-11-27  Matt Rice  <ratmice@gmail.com>
	
	* GormCore/GormResourceManager.m: Temporarily comment out some code.

2006-11-23 22:23-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Move initial position of
	Gorm document window back to the lower left of the screen.
