@@ -1,3 +1,8 @@
+2007-03-08  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Palettes/3Containers/GormTabViewAttributesInspector.m (-ok:):
+	Handle changed NSTabViewType enumerator values correctly.
+	
 2007-02-21  Matt Rice  <ratmice@gmail.com>
 
 	* GormLib/IBResourceManager.m (+registerResourceManagerClass:):
